# collabmem

./: .gitignore  latest_requirements.txt  pyproject.toml  unpinned_cl_requirements.txt
examples/metrics/: __init__.py  accuracy.py  bfcl_check.py  bleu.py  efficiency.py  interactivity.py  lic_code_pass_rate.py  pass_rate.py  reward_model.py  spider_exec_match.py  totto_bleu.py
examples/single_turn_ds/: __init__.py  abg_coqa.py  bfcl.py  bigcodebench.py  gsm8k.py  lic_code.py  math_hard.py  medium.py  spider.py  totto.py
notebooks/: compositional_gsm.ipynb  debug_spider.ipynb  download_collabllm_models.ipynb  get_eval_subset.ipynb  inspect_collabllm_datasets.ipynb  inspect_generated_data.ipynb  inspect_lic_data.ipynb  inspect_lic_output.ipynb  inspect_out.ipynb
notebooks/collabllm_tutorials/: build_datasets.ipynb  compute_mr_api.ipynb  compute_mr_local.ipynb
scripts/: code_reprs.py  eval_2h_gsm.py  gsm8k_baseline_predictions.json  multihop.py
scripts/engine/: build_dataset.py  inference.py
scripts/synth_multihop/: code_reprs.py  create_2h_gsm.py  eval_2h_gsm.py  eval_gsm8k.py  multihop.py
scripts/train/: offline_dpo.py  online_dpo.py  ppo.py  sft.py
src/collabllm/: README.md  __init__.py  metric.py  reward.py  simulation.py  synthetic.py
src/collabmem/: constants.py  nhop.py
src/lic/: README.md  app_conv_viewer.py  azure_oai_setup.py  cheatsheet_ce_shard_simulator.py  cheatsheet_context_editor.py  cheatsheet_logger.py  cheatsheet_memory.py  cheatsheet_sim_sharded.py  check_user_sim_error_rate.py  constants.py  context_editor.py  editor_playbook_mem.py  (+24 more)
(+42 files in other folders)
