[project]
name = "collabmem"
version = "0.0.1"
dependencies = [
    "GitPython",
    "accelerate",
    "bitsandbytes",
    "datasets",
    "huggingface-hub",
    "litellm",
    "nltk",
    "numpy",
    "openai",
    "pandas",
    "peft",
    "pymongo",
    "python-dotenv",
    "rich",
    "sacrebleu",
    "scipy",
    "sqlparse",
    "tenacity",
    "tiktoken",
    "tokenizers",
    "torch",
    "tqdm",
    "trl>0.18",
    "transformers",
    "vllm>=0.9",
    "wandb",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
where = ["src"]
